--- a/data/rush/16181.yaml
+++ b/data/rush/16181.yaml
@@ -50,6 +50,8 @@ effect:
   zh-CN:
 card_type: Trap
 property: Normal
+series:
+- Magma
 images:
 - index: 1
   image: EarthPressureExplosion-RDKP04-JP-C.png
