--- a/data/rush/15824.yaml
+++ b/data/rush/15824.yaml
@@ -50,6 +50,8 @@ effect:
   zh-CN:
 card_type: Trap
 property: Normal
+series:
+- Greed
 images:
 - index: 1
   image: GiantTortoiseofGreed-RDSBD2-JP-C.png
