--- a/rush.yaml
+++ b/rush.yaml
@@ -18103,6 +18103,8 @@ effect:
   zh-CN:
 card_type: Trap
 property: Normal
+series:
+- Greed
 images:
 - index: 1
   image: GiantTortoiseofGreed-RDSBD2-JP-C.png
@@ -20382,6 +20384,8 @@ effect:
   zh-CN:
 card_type: Spell
 property: Normal
+series:
+- Cat
 images:
 - index: 1
   image: CatsEye-RDMAX1-JP-C.png
@@ -20450,6 +20454,8 @@ effect:
   zh-CN:
 card_type: Trap
 property: Normal
+series:
+- Cat
 images:
 - index: 1
   image: LostCat-RDSBD6-JP-C.png
@@ -23306,6 +23312,8 @@ attribute: EARTH
 level: 1
 atk: 0
 def: 1400
+series:
+- Magma
 images:
 - index: 1
   image: Tsuvolcano-RDKP04-JP-C.png
@@ -27030,6 +27038,8 @@ effect:
   zh-CN:
 card_type: Trap
 property: Normal
+series:
+- Magma
 images:
 - index: 1
   image: EarthPressureExplosion-RDKP04-JP-C.png
@@ -36067,6 +36077,8 @@ effect:
   zh-CN:
 card_type: Trap
 property: Normal
+series:
+- Sushi Fairy
 images:
 - index: 1
   image: RolledHotArrow-RDMAX2-JP-C.png
@@ -95697,6 +95709,8 @@ effect:
   zh-CN:
 card_type: Trap
 property: Normal
+series:
+- Cat
 images:
 - index: 1
   image: StrayForce-RDKP12-JP-C.png
