--- a/data/rush/17200.yaml
+++ b/data/rush/17200.yaml
@@ -63,6 +63,8 @@ materials:
     "월마장 키메루나" ＋ "전천녀 하리키리"
   zh-TW:
   zh-CN:
+series:
+- Three Rulers
 images:
 - index: 1
   image: KimeterasutheRisingLuna-RDGRP1-JP-UR.png
