--- a/data/rush/18354.yaml
+++ b/data/rush/18354.yaml
@@ -46,6 +46,8 @@ attribute: LIGHT
 level: 4
 atk: 1200
 def: 1300
+series:
+- Cyber Dragon
 images:
 - index: 1
   image: CyberGryphon-RDORP1-JP-C.png
