--- a/data/rush/18357.yaml
+++ b/data/rush/18357.yaml
@@ -42,6 +42,8 @@ effect:
   zh-CN:
 card_type: Spell
 property: Normal
+series:
+- Cyber Dragon
 images:
 - index: 1
   image: EvolutionRushBurst-RDORP1-JP-C.png
