--- a/data/rush/18358.yaml
+++ b/data/rush/18358.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Special Summon 1 "Cyber Dragon" or "Proto-Cyber Dragon" from your hand or your Graveyard face-up to your field. This turn, you can only attack with LIGHT Attribute Machine Type monsters.
+    Special Summon 1 "Cyber Dragon" or "Proto-Cyber Dragon" from your hand or your Graveyard face-up to your field. You can only attack with LIGHT Attribute Machine Type monsters this turn.
   de:
   es:
   fr:
@@ -42,6 +42,8 @@ effect:
   zh-CN:
 card_type: Spell
 property: Normal
+series:
+- Cyber Dragon
 images:
 - index: 1
   image: CyberEntry-RDORP1-JP-C.png
