--- a/data/rush/18359.yaml
+++ b/data/rush/18359.yaml
@@ -42,6 +42,8 @@ effect:
   zh-CN:
 card_type: Trap
 property: Normal
+series:
+- Cyber Dragon
 images:
 - index: 1
   image: MultipleAdapterUnit-RDORP1-JP-C.png
