--- a/data/rush/17694.yaml
+++ b/data/rush/17694.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Destroy 1 Level 8 or lower monster on your opponent's field. Then, if you destroyed a Machine Type monster by this effect, you can destroy all monsters on your opponent's field.
+    Destroy 1 face-up Level 8 or lower monster on your opponent's field. Then, if you destroyed a Machine Type monster by this effect, you can destroy all monsters on your opponent's field.
   de:
   es:
   fr:
