--- a/data/rush/18292.yaml
+++ b/data/rush/18292.yaml
@@ -42,6 +42,8 @@ effect:
   zh-CN:
 card_type: Trap
 property: Normal
+series:
+- Arts Angel
 images:
 - index: 1
   image: SlashHalo-RDKP11-JP-C.png
