--- a/rush.yaml
+++ b/rush.yaml
@@ -53527,6 +53527,7 @@ effect:
 card_type: Spell
 property: Normal
 series:
+- Blue-Eyes
 - Signature move
 images:
 - index: 1
@@ -54426,6 +54427,8 @@ attribute: LIGHT
 level: 3
 atk: 200
 def: 700
+series:
+- Blue-Eyes
 images:
 - index: 1
   image: Kaibaman-RDSD0A-JP-C.png
@@ -69629,7 +69632,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Destroy 1 Level 8 or lower monster on your opponent's field. Then, if you destroyed a Machine Type monster by this effect, you can destroy all monsters on your opponent's field.
+    Destroy 1 face-up Level 8 or lower monster on your opponent's field. Then, if you destroyed a Machine Type monster by this effect, you can destroy all monsters on your opponent's field.
   de:
   es:
   fr:
@@ -84694,6 +84697,8 @@ effect:
   zh-CN:
 card_type: Trap
 property: Normal
+series:
+- Arts Angel
 images:
 - index: 1
   image: SlashHalo-RDKP11-JP-C.png
@@ -87141,6 +87146,8 @@ attribute: LIGHT
 level: 4
 atk: 1200
 def: 1300
+series:
+- Cyber Dragon
 images:
 - index: 1
   image: CyberGryphon-RDORP1-JP-C.png
@@ -87283,6 +87290,8 @@ attribute: LIGHT
 level: 1
 atk: 0
 def: 0
+series:
+- Cyber Dragon
 images:
 - index: 1
   image: CyberSerpent-RDORP1-JP-C.png
@@ -87348,6 +87357,8 @@ effect:
   zh-CN:
 card_type: Spell
 property: Normal
+series:
+- Cyber Dragon
 images:
 - index: 1
   image: EvolutionRushBurst-RDORP1-JP-C.png
@@ -87399,7 +87410,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Special Summon 1 "Cyber Dragon" or "Proto-Cyber Dragon" from your hand or your Graveyard face-up to your field. This turn, you can only attack with LIGHT Attribute Machine Type monsters.
+    Special Summon 1 "Cyber Dragon" or "Proto-Cyber Dragon" from your hand or your Graveyard face-up to your field. You can only attack with LIGHT Attribute Machine Type monsters this turn.
   de:
   es:
   fr:
@@ -87413,6 +87424,8 @@ effect:
   zh-CN:
 card_type: Spell
 property: Normal
+series:
+- Cyber Dragon
 images:
 - index: 1
   image: CyberEntry-RDORP1-JP-C.png
@@ -87480,6 +87493,8 @@ effect:
   zh-CN:
 card_type: Trap
 property: Normal
+series:
+- Cyber Dragon
 images:
 - index: 1
   image: MultipleAdapterUnit-RDORP1-JP-C.png
