--- a/rush.yaml
+++ b/rush.yaml
@@ -115765,6 +115765,68 @@ is_translation_unofficial:
     en: true
 yugipedia_page_id: 1017933
 ---
+konami_id: 19541
+name:
+  en: Straynge Cat Magician
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: はぐれ<ruby>使<rt>つか</rt></ruby>い<ruby>魔術師<rt>マジシャン</rt></ruby>
+  ja_romaji: Hagure Tsukai Majishan
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    Send 1 monster with 0 ATK from your hand to the Graveyard.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: |-
+    手札のモンスター（攻撃力０）１体を墓地へ送って発動できる。
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Draw 1 card. Then, if you have "Straynge Cat" in your Graveyard, you can choose 1 face-up monster with 0 ATK on your field. If you do, that monster cannot be destroyed by card effects this turn.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: |-
+    自分は１枚ドローする。自分の墓地に「はぐれ使い魔」がいる場合、さらに自分フィールドの表側表示モンスター（攻撃力０）１体を選ぶ事ができる。選んだ場合、このターン、そのモンスターは効果では破壊されない。
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Spellcaster / Effect
+attribute: EARTH
+level: 1
+atk: 0
+def: 1400
+images:
+- index: 1
+  image: StrayngeCatMagician-RDSJMP-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/SJMP-JP032
+    set_name: Saikyō Jump November 2023 promotional card
+    rarities:
+    - Normal Parallel Rare
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1008803
+---
 konami_id:
 name:
   en: Resolve
@@ -116762,68 +116824,6 @@ is_translation_unofficial:
   text:
     en: true
 yugipedia_page_id: 1006408
----
-konami_id:
-name:
-  en: Straynge Cat Magician
-  de:
-  es:
-  fr:
-  it:
-  pt:
-  ja: はぐれ<ruby>使<rt>つか</rt></ruby>い<ruby>魔術師<rt>マジシャン</rt></ruby>
-  ja_romaji: Hagure Tsukai Majishan
-  ko:
-  ko_rr:
-  zh-TW:
-  zh-CN:
-requirement:
-  en: |-
-    Send 1 monster with 0 ATK from your hand to the Graveyard.
-  de:
-  es:
-  fr:
-  it:
-  pt:
-  ja: |-
-    手札のモンスター（攻撃力０）１体を墓地へ送って発動できる。
-  ko:
-  zh-TW:
-  zh-CN:
-effect:
-  en: |-
-    Draw 1 card. Then, if you have "Straynge Cat" in your Graveyard, you can choose 1 face-up monster with 0 ATK on your field. If you do, that monster cannot be destroyed by card effects this turn.
-  de:
-  es:
-  fr:
-  it:
-  pt:
-  ja: |-
-    自分は１枚ドローする。自分の墓地に「はぐれ使い魔」がいる場合、さらに自分フィールドの表側表示モンスター（攻撃力０）１体を選ぶ事ができる。選んだ場合、このターン、そのモンスターは効果では破壊されない。
-  ko:
-  zh-TW:
-  zh-CN:
-card_type: Monster
-monster_type_line: Spellcaster / Effect
-attribute: EARTH
-level: 1
-atk: 0
-def: 1400
-images:
-- index: 1
-  image: StrayngeCatMagician-RDSJMP-JP-OP.png
-sets:
-  ja:
-  - set_number: RD/SJMP-JP032
-    set_name: Saikyō Jump November 2023 promotional card
-    rarities:
-    - Normal Parallel Rare
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
-yugipedia_page_id: 1008803
 ---
 konami_id:
 name:
