--- a/rush.yaml
+++ b/rush.yaml
@@ -120288,6 +120288,62 @@ yugipedia_page_id: 1019081
 ---
 konami_id:
 name:
+  en: Spellbook Rejection
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: <ruby>魔<rt>ま</rt></ruby><ruby>導<rt>どう</rt></ruby><ruby>書<rt>しょう</rt></ruby><ruby>棄<rt>き</rt></ruby><ruby>却<rt>きゃく</rt></ruby>
+  ja_romaji: Madōshō Kikyaku
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    You have 10 or more cards in your Deck.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Excavate the top 4 cards of your Deck. Send all excavated DARK Attribute Spellcaster Type monsters and Spell Cards to the Graveyard. Shuffle the remaining cards into the Deck. If you sent 4 cards to the Graveyard by this effect, draw 1 card.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Spell
+property: Normal
+images:
+- index: 1
+  image: SpellbookRejection-RDMRP2-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/MRP2-JP084
+    set_name: Megaroad Pack 2
+    rarities:
+    - Common
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1019140
+---
+konami_id:
+name:
   en: Time Wizard
   de:
   es:
