--- a/data/cards/09674034.yaml
+++ b/data/cards/09674034.yaml
@@ -1,7 +1,7 @@
 konami_id: 19149
 password: 9674034
 name:
-  en: Snake-Eye Excel
+  en: Snake-Eye Ash
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    If this card is Normal or Special Summoned: You can add 1 Level 1 FIRE monster from your Deck to your hand. You can send this card and 1 other face-up card you control to the GY; Special Summon 1 "Snake-Eye" monster from your hand or Deck, except "Snake-Eye Excel". You can only use each effect of "Snake-Eye Excel" once per turn.
+    If this card is Normal or Special Summoned: You can add 1 Level 1 FIRE monster from your Deck to your hand. You can send 2 face-up cards you control to the GY, including this card; Special Summon 1 "Snake-Eye" monster from your hand or Deck, except "Snake-Eye Ash". You can only use each effect of "Snake-Eye Ash" once per turn.
   de:
   es:
   fr:
@@ -36,8 +36,28 @@ series:
 - Snake-Eye
 images:
 - index: 1
-  image: SnakeEyeExcel-AGOV-JP-SR.png
+  image: SnakeEyeAsh-AGOV-JP-SR.png
 sets:
+  en:
+  - set_number: AGOV-EN007
+    set_name: Age of Overlord
+    rarities:
+  de:
+  - set_number: AGOV-DE007
+    set_name: Age of Overlord
+    rarities:
+  fr:
+  - set_number: AGOV-FR007
+    set_name: Age of Overlord
+    rarities:
+  it:
+  - set_number: AGOV-IT007
+    set_name: Age of Overlord
+    rarities:
+  pt:
+  - set_number: AGOV-PT007
+    set_name: Age of Overlord
+    rarities:
   ja:
   - set_number: AGOV-JP007
     set_name: Age of Overlord
@@ -65,9 +85,4 @@ sets:
 limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 992318
