--- a/data/cards/12058741.yaml
+++ b/data/cards/12058741.yaml
@@ -1,7 +1,7 @@
 konami_id: 19151
 password: 12058741
 name:
-  en: Snake-Eye Wight Birch
+  en: Snake-Eye Birch
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    If you control a FIRE monster, you can Special Summon this card (from your hand). You can only Special Summon "Snake-Eye Wight Birch" once per turn this way. During your opponent's turn (Quick Effect): You can send this card and 1 other face-up card you control to the GY; Special Summon 1 "Snake-Eye" monster from your hand or Deck, except "Snake-Eye Wight Birch". You can only use this effect of "Snake-Eye Wight Birch" once per turn.
+    If you control a FIRE monster, you can Special Summon this card (from your hand). You can only Special Summon "Snake-Eye Birch" once per turn this way. During your opponent's turn (Quick Effect): You can send 2 face-up cards you control to the GY, including this card; Special Summon 1 "Snake-Eye" monster from your hand or Deck, except "Snake-Eye Birch". You can only use this effect of "Snake-Eye Birch" once per turn.
   de:
   es:
   fr:
@@ -36,8 +36,28 @@ series:
 - Snake-Eye
 images:
 - index: 1
-  image: SnakeEyeWightBirch-AGOV-JP-C.png
+  image: SnakeEyeBirch-AGOV-JP-C.png
 sets:
+  en:
+  - set_number: AGOV-EN009
+    set_name: Age of Overlord
+    rarities:
+  de:
+  - set_number: AGOV-DE009
+    set_name: Age of Overlord
+    rarities:
+  fr:
+  - set_number: AGOV-FR009
+    set_name: Age of Overlord
+    rarities:
+  it:
+  - set_number: AGOV-IT009
+    set_name: Age of Overlord
+    rarities:
+  pt:
+  - set_number: AGOV-PT009
+    set_name: Age of Overlord
+    rarities:
   ja:
   - set_number: AGOV-JP009
     set_name: Age of Overlord
@@ -51,9 +71,4 @@ sets:
 limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 992322
