--- a/data/cards/45663742.yaml
+++ b/data/cards/45663742.yaml
@@ -1,7 +1,7 @@
 konami_id: 19150
 password: 45663742
 name:
-  en: Snake-Eye Oark
+  en: Snake-Eye Oak
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    If this card is Normal or Special Summoned: You can target 1 of your Level 1 FIRE monsters that is banished or in your GY; either add it to your hand or Special Summon it. You can send this card and 1 other face-up card you control to the GY; Special Summon 1 "Snake-Eye" monster from your hand or Deck, except "Snake-Eye Oark". You can only use each effect of "Snake-Eye Oark" once per turn.
+    If this card is Normal or Special Summoned: You can target 1 of your Level 1 FIRE monsters that is banished or in your GY; either add it to your hand or Special Summon it. You can send 2 face-up cards you control to the GY, including this card; Special Summon 1 "Snake-Eye" monster from your hand or Deck, except "Snake-Eye Oak". You can only use each effect of "Snake-Eye Oak" once per turn.
   de:
   es:
   fr:
@@ -36,8 +36,28 @@ series:
 - Snake-Eye
 images:
 - index: 1
-  image: SnakeEyeOark-AGOV-JP-C.png
+  image: SnakeEyeOak-AGOV-JP-C.png
 sets:
+  en:
+  - set_number: AGOV-EN008
+    set_name: Age of Overlord
+    rarities:
+  de:
+  - set_number: AGOV-DE008
+    set_name: Age of Overlord
+    rarities:
+  fr:
+  - set_number: AGOV-FR008
+    set_name: Age of Overlord
+    rarities:
+  it:
+  - set_number: AGOV-IT008
+    set_name: Age of Overlord
+    rarities:
+  pt:
+  - set_number: AGOV-PT008
+    set_name: Age of Overlord
+    rarities:
   ja:
   - set_number: AGOV-JP008
     set_name: Age of Overlord
@@ -51,9 +71,4 @@ sets:
 limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 992320
