--- a/data/cards/74906081.yaml
+++ b/data/cards/74906081.yaml
@@ -1,7 +1,7 @@
 konami_id: 19217
 password: 74906081
 name:
-  en: The Glaring Ruler Snake-Eyes
+  en: Startling Stare of the Snake-Eyes
   de:
   es:
   fr:
@@ -15,10 +15,10 @@ name:
   zh-CN:
 text:
   en: |-
-    If the total Levels of all "Snake-Eye" monsters you control equal 2 or more: Activate 1 of these effects.
-    ● Target 1 monster in your opponent's GY or face-up field; place it face-up in its owner's Spell & Trap Zone as a Continuous Spell.
-    ● Target 1 Monster Card on the field treated as a Continuous Spell; Special Summon it to your field.
-    You can only activate 1 "The Glaring Ruler Snake-Eyes" per turn.
+    If the total Levels of "Snake-Eye" monsters you control are 2 or higher: Activate 1 of these effects;
+    ● Target 1 face-up monster your opponent controls or in their GY; place it face-up in its owner's Spell & Trap Zone as a Continuous Spell.
+    ● Target 1 Monster Card treated as a Continuous Spell on the field; Special Summon it to your field.
+    You can only activate 1 "Startling Stare of the Snake-Eyes" per turn.
   de:
   es:
   fr:
@@ -35,8 +35,28 @@ series:
 - Snake-Eye
 images:
 - index: 1
-  image: TheGlaringRulerSnakeEyes-AGOV-JP-C.png
+  image: StartlingStareoftheSnakeEyes-AGOV-JP-C.png
 sets:
+  en:
+  - set_number: AGOV-EN075
+    set_name: Age of Overlord
+    rarities:
+  de:
+  - set_number: AGOV-DE075
+    set_name: Age of Overlord
+    rarities:
+  fr:
+  - set_number: AGOV-FR075
+    set_name: Age of Overlord
+    rarities:
+  it:
+  - set_number: AGOV-IT075
+    set_name: Age of Overlord
+    rarities:
+  pt:
+  - set_number: AGOV-PT075
+    set_name: Age of Overlord
+    rarities:
   ja:
   - set_number: AGOV-JP075
     set_name: Age of Overlord
@@ -50,9 +70,4 @@ sets:
 limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 992339
