--- a/data/cards/89023486.yaml
+++ b/data/cards/89023486.yaml
@@ -1,7 +1,7 @@
 konami_id: 19199
 password: 89023486
 name:
-  en: The Original Sinful Spoils - Snake-Eye
+  en: Original Sinful Spoils - Snake-Eye
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    Send 1 other face-up card you control to the GY; Special Summon 1 Level 1 FIRE monster from your hand or Deck. You can banish this card from your GY, then target 1 "Snake-Eye" or "Diabellestarr" monster in your GY; add 1 Level 1 FIRE monster from your Deck to your hand, then place the targeted monster on the bottom of the Deck. You can only use 1 "The Original Sinful Spoils - Snake-Eye" effect per turn, and only once that turn.
+    Send 1 other face-up card you control to the GY; Special Summon 1 Level 1 FIRE monster from your hand or Deck. You can banish this card from your GY, then target 1 "Snake-Eye" or "Diabellstar" monster in your GY; add 1 Level 1 FIRE monster from your Deck to your hand, then place the targeted monster on the bottom of the Deck. You can only use 1 "Original Sinful Spoils - Snake-Eye" effect per turn, and only once that turn.
   de:
   es:
   fr:
@@ -33,8 +33,38 @@ series:
 - Sinful Spoils
 images:
 - index: 1
-  image: TheOriginalSinfulSpoilsSnakeEye-AGOV-JP-R.png
+  image: OriginalSinfulSpoilsSnakeEye-AGOV-JP-R.png
 sets:
+  en:
+  - set_number: AGOV-EN057
+    set_name: Age of Overlord
+    rarities:
+    - Ultra Rare
+    - Quarter Century Secret Rare
+  de:
+  - set_number: AGOV-DE057
+    set_name: Age of Overlord
+    rarities:
+    - Ultra Rare
+    - Quarter Century Secret Rare
+  fr:
+  - set_number: AGOV-FR057
+    set_name: Age of Overlord
+    rarities:
+    - Ultra Rare
+    - Quarter Century Secret Rare
+  it:
+  - set_number: AGOV-IT057
+    set_name: Age of Overlord
+    rarities:
+    - Ultra Rare
+    - Quarter Century Secret Rare
+  pt:
+  - set_number: AGOV-PT057
+    set_name: Age of Overlord
+    rarities:
+    - Ultra Rare
+    - Quarter Century Secret Rare
   ja:
   - set_number: AGOV-JP057
     set_name: Age of Overlord
@@ -48,9 +78,4 @@ sets:
 limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 992333
