--- a/data/rush/18680.yaml
+++ b/data/rush/18680.yaml
@@ -32,6 +32,8 @@ attribute: FIRE
 level: 8
 atk: 3500
 def: 2000
+series:
+- Red-Eyes
 images:
 - index: 1
   image: MeteorBlackDragon-RDLGP1-JP-ORR.png
