--- a/data/rush/18985.yaml
+++ b/data/rush/18985.yaml
@@ -42,6 +42,8 @@ effect:
   zh-CN:
 card_type: Spell
 property: Field
+series:
+- Monarch
 images:
 - index: 1
   image: EmperorRealm-RDKP13-JP-C.png
