--- a/data/rush/19339.yaml
+++ b/data/rush/19339.yaml
@@ -40,6 +40,8 @@ effect:
   zh-CN:
 card_type: Trap
 property: Normal
+series:
+- Gaia
 images:
 - index: 1
   image: DragonicEscape-RDKP14-JP-C.png
