--- a/data/rush/19426.yaml
+++ b/data/rush/19426.yaml
@@ -44,6 +44,8 @@ attribute: DARK
 level: 4
 atk: 1200
 def: 1100
+series:
+- Blue-Eyes
 images:
 - index: 1
   image: AbsoluteLordofD-RDSD0A-JP-C.png
