--- a/data/rush/yugipedia1012490.yaml
+++ b/data/rush/yugipedia1012490.yaml
@@ -60,6 +60,8 @@ materials:
   ko:
   zh-TW:
   zh-CN:
+series:
+- Three Rulers
 images:
 - index: 1
   image: KimeterasutheDivineRuler-RDMRP2-JP-OP.png
