--- a/data/rush/yugipedia1018698.yaml
+++ b/data/rush/yugipedia1018698.yaml
@@ -40,6 +40,8 @@ effect:
   zh-CN:
 card_type: Spell
 property: Field
+series:
+- Beast Gear
 images:
 - index: 1
   image: ApocalypseBeastOverWorld-RDMRP2-JP-OP.png
