--- a/data/rush/yugipedia1019072.yaml
+++ b/data/rush/yugipedia1019072.yaml
@@ -20,7 +20,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    デッキをシャッフルして発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -32,7 +33,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分のデッキの上からカードを２枚めくり、お互いに確認する。自分はめくったカードの中からモンスター１体を選んで墓地へ送る事ができる。残りのカードをデッキに戻す。この効果で「斬神キバツ」を墓地へ送った場合、相手フィールドの表側表示のカード１枚を選んで破壊できる。
   ko:
   zh-TW:
   zh-CN:
