--- a/data/rush/18943.yaml
+++ b/data/rush/18943.yaml
@@ -46,6 +46,8 @@ attribute: DARK
 level: 3
 atk: 800
 def: 1000
+series:
+- Monarch
 images:
 - index: 1
   image: ZusetheWisdomVassal-RDKP13-JP-C.png
