--- a/data/rush/18944.yaml
+++ b/data/rush/18944.yaml
@@ -46,6 +46,8 @@ attribute: LIGHT
 level: 4
 atk: 800
 def: 1000
+series:
+- Monarch
 images:
 - index: 1
   image: HebetheStarVassal-RDKP13-JP-C.png
