--- a/data/rush/18984.yaml
+++ b/data/rush/18984.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    The equipped monster gains 200 ATK, and if it attacks a Defense Position monster, inflict piercing battle damage (if the ATK of the attacking monster exceeds the DEF of the attack target, inflict the difference). If the equipped monster is Magical Knight Type, it gains additional ATK equal to [its Level] x 200.
+    The equipped monster gains 200 ATK, and if it attacks a Defense Position monster, inflict piercing battle damage (if the ATK of the attacking monster exceeds the DEF of the attack target, inflict the difference). If the equipped monster is Magical Knight Type, it gains additional [its Level] x 200 ATK.
   de:
   es:
   fr:
