--- a/data/rush/19307.yaml
+++ b/data/rush/19307.yaml
@@ -60,6 +60,8 @@ attribute: WATER
 level: 5
 atk: 1000
 def: 2000
+series:
+- Gaia
 images:
 - index: 1
   image: LauncherCatapultTurtle-RDKP14-JP-C.png
