--- a/data/rush/19308.yaml
+++ b/data/rush/19308.yaml
@@ -60,6 +60,8 @@ attribute: DARK
 level: 5
 atk: 2000
 def: 1500
+series:
+- Gaia
 images:
 - index: 1
   image: VeteranCurseofDragon-RDKP14-JP-SR.png
