--- a/data/rush/19329.yaml
+++ b/data/rush/19329.yaml
@@ -40,6 +40,8 @@ effect:
   zh-CN:
 card_type: Spell
 property: Normal
+series:
+- Gaia
 images:
 - index: 1
   image: MonsterConvocation-RDKP14-JP-R.png
