--- a/data/rush/19330.yaml
+++ b/data/rush/19330.yaml
@@ -40,6 +40,8 @@ effect:
   zh-CN:
 card_type: Spell
 property: Field
+series:
+- Gaia
 images:
 - index: 1
   image: DarkBattleGrounds-RDKP14-JP-C.png
