--- a/data/rush/19433.yaml
+++ b/data/rush/19433.yaml
@@ -40,6 +40,8 @@ effect:
   zh-CN:
 card_type: Trap
 property: Normal
+series:
+- Blue-Eyes
 images:
 - index: 1
   image: TreasureofEyesofBlue-RDSD0A-JP-C.png
