--- a/data/rush/yugipedia1019140.yaml
+++ b/data/rush/yugipedia1019140.yaml
@@ -20,7 +20,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分のデッキのカードが１０枚以上の場合に発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -32,7 +33,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分のデッキの上からカードを４枚めくり、お互いに確認する。自分はめくったカードの中からモンスター（闇属性／魔法使い族）と魔法カードを全て墓地へ送る。残りのカードをデッキに戻す。この効果で４枚墓地へ送られた場合、自分は１枚ドローする。
   ko:
   zh-TW:
   zh-CN:
