--- a/data/rush/17029.yaml
+++ b/data/rush/17029.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Inflict 400 damage to your opponent. This turn, your opponent cannot Tribute face-down monsters for a Tribute Summon.
+    Inflict 400 damage to your opponent. Your opponent cannot Tribute face-down monsters for a Tribute Summon this turn.
   de:
   es:
   fr:
