--- a/data/rush/18360.yaml
+++ b/data/rush/18360.yaml
@@ -45,7 +45,7 @@ effect_types:
 - Effect
 effect:
   en: |-
-    Shuffle 1 face-up Level 6 monster on your field and 1 face-up Level 7 or 8 monster on your opponent's field into the owner's Decks. This turn, your Level 7 or higher monsters cannot attack.
+    Shuffle 1 face-up Level 6 monster on your field and 1 face-up Level 7 or 8 monster on your opponent's field into the owner's Decks. Your Level 7 or higher monsters cannot attack this turn.
   de:
   es:
   fr:
