--- a/data/rush/18380.yaml
+++ b/data/rush/18380.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    This turn, this face-up card can be treated as 2 Tributes for the Tribute Summon of a Level 7 Dragon Type monster in Attack Position. This turn, you can only attack with High Dragon or Dragon Type monsters.
+    This turn, this face-up card can be treated as 2 Tributes for the Tribute Summon of a Level 7 Dragon Type monster in Attack Position. You can only attack with High Dragon or Dragon Type monsters this turn.
   de:
   es:
   fr:
