--- a/data/rush/16997.yaml
+++ b/data/rush/16997.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Special Summon 1 Fish or Sea Serpent Type monster from your hand face-up to your field. This turn, you can only attack with WATER Attribute monsters.
+    Special Summon 1 Fish or Sea Serpent Type monster from your hand face-up to your field. You can only attack with WATER Attribute monsters this turn.
   de:
   es:
   fr:
