--- a/data/rush/17522.yaml
+++ b/data/rush/17522.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Destroy 1 face-up Level 5-8 Insect Type monster on your opponent's field. This turn, you can only attack with Insect Type monsters.
+    Destroy 1 face-up Level 5-8 Insect Type monster on your opponent's field. You can only attack with Insect Type monsters this turn.
   de:
   es:
   fr:
