--- a/data/rush/17578.yaml
+++ b/data/rush/17578.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Add 1 LIGHT Attribute Galaxy Type Normal Monster from your Graveyard to your hand. This turn, you can only attack with Galaxy Type monsters.
+    Add 1 LIGHT Attribute Galaxy Type Normal Monster from your Graveyard to your hand. You can only attack with Galaxy Type monsters this turn.
   de:
   es:
   fr:
