--- a/data/rush/17671.yaml
+++ b/data/rush/17671.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Send the top 4 cards of your Deck to the Graveyard. This turn, you can only attack with DARK Attribute Spellcaster Type monsters.
+    Send the top 4 cards of your Deck to the Graveyard. You can only attack with DARK Attribute Spellcaster Type monsters this turn.
   de:
   es:
   fr:
