--- a/data/rush/17894.yaml
+++ b/data/rush/17894.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Destroy all face-up Level 8 or lower monsters on your opponent's field. This turn, you can only attack with Beast Type monsters.
+    Destroy all face-up Level 8 or lower monsters on your opponent's field. You can only attack with Beast Type monsters this turn.
   de:
   es:
   fr:
