--- a/data/rush/17961.yaml
+++ b/data/rush/17961.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Add 1 Level 4 Pyro Type Normal Monster from your Graveyard to your hand. This turn, you can only attack with Pyro Type monsters.
+    Add 1 Level 4 Pyro Type Normal Monster from your Graveyard to your hand. You can only attack with Pyro Type monsters this turn.
   de:
   es:
   fr:
