--- a/data/rush/18264.yaml
+++ b/data/rush/18264.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Increase this card's Level by [the number of face-up monsters on your opponent's field] until the end of this turn. This turn, you can only attack with Fiend Type monsters.
+    Increase this card's Level by [the number of face-up monsters on your opponent's field] until the end of this turn. You can only attack with Fiend Type monsters this turn.
   de:
   es:
   fr:
