--- a/data/rush/18362.yaml
+++ b/data/rush/18362.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Add 1 Level 6 non-WATER Attribute monster with 500 DEF from your Graveyard to your hand. This turn, your Level 7 or higher monsters cannot attack.
+    Add 1 Level 6 non-WATER Attribute monster with 500 DEF from your Graveyard to your hand. Your Level 7 or higher monsters cannot attack this turn.
   de:
   es:
   fr:
