--- a/data/rush/18367.yaml
+++ b/data/rush/18367.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Draw 2 cards. This turn, your Level 7 or higher monsters cannot attack.
+    Draw 2 cards. Your Level 7 or higher monsters cannot attack this turn.
   de:
   es:
   fr:
