--- a/data/rush/18608.yaml
+++ b/data/rush/18608.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Set 1 "Fusion" from your Graveyard in your Spell & Trap Zone. This turn, you can only attack directly with Fusion Monsters.
+    Set 1 "Fusion" from your Graveyard in your Spell & Trap Zone. You can only attack directly with Fusion Monsters this turn.
   de:
   es:
   fr:
