--- a/data/rush/19279.yaml
+++ b/data/rush/19279.yaml
@@ -27,7 +27,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Special Summon 1 "Jointech Arc Scorpio", "Jointech Spike Centipede", or "Jointech Rex" from your Graveyard to your field in face-up Defense Position. This turn, you cannot activate the effects of non-Machine Type monsters.
+    Special Summon 1 "Jointech Arc Scorpio", "Jointech Spike Centipede", or "Jointech Rex" from your Graveyard to your field in face-up Defense Position. You cannot activate the effects of non-Machine Type monsters this turn.
   de:
   es:
   fr:
