--- a/data/rush/19342.yaml
+++ b/data/rush/19342.yaml
@@ -27,7 +27,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Negate the attack. This turn, your opponent cannot declare an attack.
+    Negate the attack. Your opponent cannot declare an attack this turn.
   de:
   es:
   fr:
