--- a/data/rush/19428.yaml
+++ b/data/rush/19428.yaml
@@ -27,7 +27,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Special Summon 1 Level 8 LIGHT Attribute Dragon Type monster from your Graveyard face-up to your field. This turn, your Level 7 or lower monsters cannot attack.
+    Special Summon 1 Level 8 LIGHT Attribute Dragon Type monster from your Graveyard face-up to your field. Your Level 7 or lower monsters cannot attack this turn.
   de:
   es:
   fr:
