--- a/data/rush/yugipedia1018708.yaml
+++ b/data/rush/yugipedia1018708.yaml
@@ -27,7 +27,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Destroy 1 face-down card on your opponent's field. This turn, you can only attack with Beast-Warrior Type monsters.
+    Destroy 1 face-down card on your opponent's field. You can only attack with Beast-Warrior Type monsters this turn.
   de:
   es:
   fr:
