--- a/rush.yaml
+++ b/rush.yaml
@@ -49867,7 +49867,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Special Summon 1 Fish or Sea Serpent Type monster from your hand face-up to your field. This turn, you can only attack with WATER Attribute monsters.
+    Special Summon 1 Fish or Sea Serpent Type monster from your hand face-up to your field. You can only attack with WATER Attribute monsters this turn.
   de:
   es:
   fr:
@@ -52191,7 +52191,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Inflict 400 damage to your opponent. This turn, your opponent cannot Tribute face-down monsters for a Tribute Summon.
+    Inflict 400 damage to your opponent. Your opponent cannot Tribute face-down monsters for a Tribute Summon this turn.
   de:
   es:
   fr:
@@ -56656,7 +56656,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Reduce the Level of 1 face-up Level 3-8 monster on your opponent's field by 2 until the end of this turn.
+    Reduce the Level of 1 Level 3-8 face-up monster on your opponent's field by 2 until the end of this turn.
   de:
   es:
   fr:
@@ -59429,7 +59429,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    This turn, your opponent's monsters with 3000 or more ATK cannot attack. Also, you can shuffle up to 5 Reptile Type monsters from your Graveyard into the Deck.
+    Your opponent's monsters with 3000 or more ATK cannot attack this turn. Then, you can shuffle up to 5 Reptile Type monsters from your Graveyard into the Deck.
   de:
   es:
   fr:
@@ -62639,7 +62639,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Destroy 1 face-up Level 5-8 Insect Type monster on your opponent's field. This turn, you can only attack with Insect Type monsters.
+    Destroy 1 face-up Level 5-8 Insect Type monster on your opponent's field. You can only attack with Insect Type monsters this turn.
   de:
   es:
   fr:
@@ -65669,7 +65669,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Special Summon 2 Level 6 or lower Galaxy Type Normal Monsters from your Graveyard face-up to your field. This turn, you can only attack with Galaxy Type monsters.
+    Special Summon 2 Level 6 or lower Galaxy Type Normal Monsters from your Graveyard face-up to your field. You can only attack with Galaxy Type monsters this turn.
   de:
   es:
   fr:
@@ -66183,7 +66183,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Add 1 LIGHT Attribute Galaxy Type Normal Monster from your Graveyard to your hand. This turn, you can only attack with Galaxy Type monsters.
+    Add 1 LIGHT Attribute Galaxy Type Normal Monster from your Graveyard to your hand. You can only attack with Galaxy Type monsters this turn.
   de:
   es:
   fr:
@@ -68099,7 +68099,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Send the top 4 cards of your Deck to the Graveyard. This turn, you can only attack with DARK Attribute Spellcaster Type monsters.
+    Send the top 4 cards of your Deck to the Graveyard. You can only attack with DARK Attribute Spellcaster Type monsters this turn.
   de:
   es:
   fr:
@@ -68965,7 +68965,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Special Summon 1 "CAN:D" or "Ama Lilith" from your Graveyard face-up to your field. This turn, you can only attack with Omega Psychic or Psychic Type monsters.
+    Special Summon 1 "CAN:D" or "Ama Lilith" from your Graveyard face-up to your field. You can only attack with Omega Psychic or Psychic Type monsters this turn.
   de:
   es:
   fr:
@@ -70482,7 +70482,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Special Summon up to 2 Level 6 or lower Zombie Type monsters from your Graveyard face-up to your field. Then, send 1 Level 5 or higher Zombie Type monster from your hand to the Graveyard. This turn, you can only attack with Zombie Type monsters.
+    Special Summon up to 2 Level 6 or lower Zombie Type monsters from your Graveyard face-up to your field. Then, send 1 Level 5 or higher Zombie Type monster from your hand to the Graveyard. You can only attack with Zombie Type monsters this turn.
   de:
   es:
   fr:
@@ -75306,7 +75306,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Destroy all face-up Level 8 or lower monsters on your opponent's field. This turn, you can only attack with Beast Type monsters.
+    Destroy all face-up Level 8 or lower monsters on your opponent's field. You can only attack with Beast Type monsters this turn.
   de:
   es:
   fr:
@@ -79072,7 +79072,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Add 1 Level 4 Pyro Type Normal Monster from your Graveyard to your hand. This turn, you can only attack with Pyro Type monsters.
+    Add 1 Level 4 Pyro Type Normal Monster from your Graveyard to your hand. You can only attack with Pyro Type monsters this turn.
   de:
   es:
   fr:
@@ -82756,7 +82756,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Increase this card's Level by [the number of face-up monsters on your opponent's field] until the end of this turn. This turn, you can only attack with Fiend Type monsters.
+    Increase this card's Level by [the number of face-up monsters on your opponent's field] until the end of this turn. You can only attack with Fiend Type monsters this turn.
   de:
   es:
   fr:
@@ -86188,7 +86188,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Special Summon 1 Level 4 or lower Maximum Monster from your Graveyard face-up to your field. This turn, you can only attack with Maximum Monsters.
+    Special Summon 1 Level 4 or lower Maximum Monster from your Graveyard face-up to your field. You can only attack with Maximum Monsters this turn.
   de:
   es:
   fr:
@@ -86259,7 +86259,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Special Summon 1 Level 10 Maximum Monster from your Graveyard to your field in face-up Defense Position. This turn, you can only attack with Maximum Monsters.
+    Special Summon 1 Level 10 Maximum Monster from your Graveyard to your field in face-up Defense Position. You can only attack with Maximum Monsters this turn.
   de:
   es:
   fr:
@@ -86330,7 +86330,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Return up to 2 face-up Fiend Type Maximum Monsters from your field to the owner's hand. This turn, you can only attack with Maximum Monsters.
+    Return up to 2 face-up Fiend Type Maximum Monsters from your field to the owner's hand. You can only attack with Maximum Monsters this turn.
   de:
   es:
   fr:
@@ -86397,7 +86397,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Add 1 Level 10 Fiend Type Maximum Monster from your Graveyard to your hand. This turn, you can only attack with Maximum Monsters.
+    Add 1 Level 10 Fiend Type Maximum Monster from your Graveyard to your hand. You can only attack with Maximum Monsters this turn.
   de:
   es:
   fr:
@@ -87563,7 +87563,7 @@ effect_types:
 - Effect
 effect:
   en: |-
-    Shuffle 1 face-up Level 6 monster on your field and 1 face-up Level 7 or 8 monster on your opponent's field into the owner's Decks. This turn, your Level 7 or higher monsters cannot attack.
+    Shuffle 1 face-up Level 6 monster on your field and 1 face-up Level 7 or 8 monster on your opponent's field into the owner's Decks. Your Level 7 or higher monsters cannot attack this turn.
   de:
   es:
   fr:
@@ -87734,7 +87734,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Add 1 Level 6 non-WATER Attribute monster with 500 DEF from your Graveyard to your hand. This turn, your Level 7 or higher monsters cannot attack.
+    Add 1 Level 6 non-WATER Attribute monster with 500 DEF from your Graveyard to your hand. Your Level 7 or higher monsters cannot attack this turn.
   de:
   es:
   fr:
@@ -87973,7 +87973,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Destroy 1 Spell/Trap Card on your opponent's field. This turn, your Level 7 or higher monsters cannot attack.
+    Destroy 1 Spell/Trap Card on your opponent's field. Your Level 7 or higher monsters cannot attack this turn.
   de:
   es:
   fr:
@@ -88142,7 +88142,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Draw 2 cards. This turn, your Level 7 or higher monsters cannot attack.
+    Draw 2 cards. Your Level 7 or higher monsters cannot attack this turn.
   de:
   es:
   fr:
@@ -88211,7 +88211,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Special Summon 1 Level 6 monster with 500 DEF from your hand or your Graveyard face-up to your field. This turn, your Level 7 or higher monsters cannot attack.
+    Special Summon 1 Level 6 monster with 500 DEF from your hand or your Graveyard face-up to your field. Your Level 7 or higher monsters cannot attack this turn.
   de:
   es:
   fr:
@@ -89075,7 +89075,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    This turn, this face-up card can be treated as 2 Tributes for the Tribute Summon of a Level 7 Dragon Type monster in Attack Position. This turn, you can only attack with High Dragon or Dragon Type monsters.
+    This turn, this face-up card can be treated as 2 Tributes for the Tribute Summon of a Level 7 Dragon Type monster in Attack Position. You can only attack with High Dragon or Dragon Type monsters this turn.
   de:
   es:
   fr:
@@ -92965,7 +92965,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    1 face-up monster on your opponent's field loses ATK equal to [the number of monsters revealed to meet the requirement] x 200 until the end of this turn. This turn, you can only attack with Celestial Warrior, Warrior, or Fairy Type monsters.
+    1 face-up monster on your opponent's field loses ATK equal to [the number of monsters revealed to meet the requirement] x 200 until the end of this turn. You can only attack with Celestial Warrior, Warrior, or Fairy Type monsters this turn.
   de:
   es:
   fr:
@@ -93107,7 +93107,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Set 1 "Fusion" from your Graveyard in your Spell & Trap Zone. This turn, you can only attack directly with Fusion Monsters.
+    Set 1 "Fusion" from your Graveyard in your Spell & Trap Zone. You can only attack directly with Fusion Monsters this turn.
   de:
   es:
   fr:
@@ -98069,7 +98069,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Fusion Summon by shuffling 1 face-up Dragon Type Normal Monster from your field and 1 or more Dragon Type monsters from your Graveyard into the owner's Deck as material. This turn, you can only attack with Fusion Monsters.
+    Fusion Summon by shuffling 1 face-up Dragon Type Normal Monster from your field and 1 or more Dragon Type monsters from your Graveyard into the owner's Deck as material. You can only attack with Fusion Monsters this turn.
   de:
   es:
   fr:
@@ -107939,7 +107939,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Up to 3 face-up WIND Attribute monsters on your field gain 600 ATK until the end of this turn. This turn, your opponent cannot activate Trap Cards.
+    Up to 3 face-up WIND Attribute monsters on your field gain 600 ATK until the end of this turn. Your opponent cannot activate Trap Cards this turn.
   de:
   es:
   fr:
@@ -108532,7 +108532,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Add 1 Level 7 or higher WIND Attribute monster and 1 Warrior Type Normal Monster from your Graveyard to your hand. This turn, you cannot activate monster effects, except WIND Attribute Warrior or Beast Type monsters'.
+    Add 1 Level 7 or higher WIND Attribute monster and 1 Warrior Type Normal Monster from your Graveyard to your hand. You cannot activate the monster effects of non-WIND Attribute Warrior or Beast Type monsters this turn.
   de:
   es:
   fr:
@@ -110592,7 +110592,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Special Summon 1 "Jointech Arc Scorpio", "Jointech Spike Centipede", or "Jointech Rex" from your Graveyard to your field in face-up Defense Position. This turn, you cannot activate the effects of non-Machine Type monsters.
+    Special Summon 1 "Jointech Arc Scorpio", "Jointech Spike Centipede", or "Jointech Rex" from your Graveyard to your field in face-up Defense Position. You cannot activate the effects of non-Machine Type monsters this turn.
   de:
   es:
   fr:
@@ -110937,7 +110937,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Destroy 1 monster on your opponent's field. This turn, you cannot activate the effects of non-Machine Type monsters.
+    Destroy 1 monster on your opponent's field. You cannot activate the effects of non-Machine Type monsters this turn.
   de:
   es:
   fr:
@@ -114721,7 +114721,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Negate the attack. This turn, your opponent cannot declare an attack.
+    Negate the attack. Your opponent cannot declare an attack this turn.
   de:
   es:
   fr:
@@ -115273,7 +115273,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Special Summon 1 Level 8 LIGHT Attribute Dragon Type monster from your Graveyard face-up to your field. This turn, your Level 7 or lower monsters cannot attack.
+    Special Summon 1 Level 8 LIGHT Attribute Dragon Type monster from your Graveyard face-up to your field. Your Level 7 or lower monsters cannot attack this turn.
   de:
   es:
   fr:
@@ -119355,7 +119355,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Special Summon 1 Level 2 Psychic Type monster with 500 ATK/0 DEF from your Graveyard face-up to your field. This turn, you can only attack with Omega Psychic or Psychic Type monsters.
+    Special Summon 1 Level 2 Psychic Type monster with 500 ATK/0 DEF from your Graveyard face-up to your field. You can only attack with Omega Psychic or Psychic Type monsters this turn.
   de:
   es:
   fr:
@@ -119661,7 +119661,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Destroy 1 face-down card on your opponent's field. This turn, you can only attack with Beast-Warrior Type monsters.
+    Destroy 1 face-down card on your opponent's field. You can only attack with Beast-Warrior Type monsters this turn.
   de:
   es:
   fr:
@@ -119831,7 +119831,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Draw 1 card. Then, you can destroy 1 card on your opponent's field. This turn, you can only attack with Omega Psychic or Psychic Type monsters.
+    Draw 1 card. Then, you can destroy 1 card on your opponent's field. You can only attack with Omega Psychic or Psychic Type monsters this turn.
   de:
   es:
   fr:
