--- a/data/rush/19114.yaml
+++ b/data/rush/19114.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Add 1 Level 7 or higher WIND Attribute monster and 1 Warrior Type Normal Monster from your Graveyard to your hand. You cannot activate the monster effects of non-WIND Attribute Warrior or Beast Type monsters this turn.
+    Add 1 Level 7 or higher WIND Attribute monster and 1 Warrior Type Normal Monster from your Graveyard to your hand.  This turn, you cannot activate monster effects, except WIND Attribute Warrior Type or Beast Type monsters'.
   de:
   es:
   fr:
