--- a/data/cards/yugipedia1002438.yaml
+++ b/data/cards/yugipedia1002438.yaml
@@ -7,7 +7,7 @@ name:
   fr:
   it:
   pt:
-  ja: ユベル－<ruby>Ｄａｓ Ｅｗｉｇ Ｌｉｅｂｅ Ｗäｃｈｔｅｒ<rt>ダス・エーヴィヒ・リーベ・ヴェヒター</rt></ruby>
+  ja: ユベル－<ruby>The Forever Dear Guardian<rt>ダス・エーヴィヒ・リーベ・ヴェヒター</rt></ruby>
   ja_romaji: Yuberu - Dasu Ēvihi Rībe Vehitā
   ko:
   ko_rr:
